[tool.poetry]
name = "new_wave"
version = "0.1.0"
description = ""
authors = ["benjamindev <benjamin.decharmoy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyter = "^1.0.0"
nbdev = "^0.2.5"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.761"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
